# emf-rs

./: AGENTS.md  Cargo.toml  Makefile  README.md
.claude/: settings.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/converter/: mod.rs  playback_device_context.rs  player.rs
core/src/converter/svg/: mod.rs  node.rs  util.rs
core/src/parser/: mod.rs
core/src/parser/enums/: arc_direction.rs  arm_style.rs  background_mode.rs  color_adjustment.rs  color_match_to_target.rs  color_space.rs  contrast.rs  dib_colors.rs  emr_comment.rs  ext_text_out_options.rs  family_type.rs  flood_fill.rs  format_signature.rs  gradient_fill.rs  graphics_mode.rs  hatch_style.rs  icm_mode.rs  illuminant.rs  layout_mode.rs  letterform.rs  map_mode.rs  metafile_version.rs  mid_line.rs  mod.rs  modify_world_transform_mode.rs  pen_style.rs  point.rs  polygon_fill_mode.rs  proportion.rs  record_type.rs  region_mode.rs  serif_type.rs  stock_object.rs  stretch_mode.rs  stroke_variation.rs  weight.rs  x_height.rs
core/src/parser/objects/: bit_fix28_4.rs  color_adjustment.rs  design_vector.rs  emr_format.rs  emr_text.rs  eps_data.rs  gradient_rectangle.rs  gradient_triangle.rs  header.rs  header_extension_1.rs  header_extension_2.rs  log_brush_ex.rs  log_font.rs  log_font_ex.rs  log_font_ex_dv.rs  log_font_panose.rs  log_palette.rs  log_palette_entry.rs  log_pen.rs  log_pen_ex.rs  mod.rs  panose.rs  pixel_format_descriptor.rs  point28_4.rs  region_data.rs  region_data_header.rs  tri_vertex.rs  universal_font_id.rs  x_form.rs
core/src/parser/primitive/: mod.rs
core/src/parser/records/: mod.rs
core/src/parser/records/bitmap/: alpha_blend.rs  bit_blt.rs  mask_blt.rs  mod.rs  plg_blt.rs  set_dibits_to_device.rs  stretch_blt.rs  stretch_dibits.rs  transparent_blt.rs
core/src/parser/records/clipping/: exclude_clip_rect.rs  ext_select_clip_rgn.rs  intersect_clip_rect.rs  mod.rs  offset_clip_rgn.rs  select_clip_path.rs  set_meta_rgn.rs
core/src/parser/records/comment/: comment.rs  mod.rs
core/src/parser/records/control/: eof.rs  header.rs  mod.rs
core/src/parser/records/drawing/: angle_arc.rs  arc.rs  arc_to.rs  chord.rs  ellipse.rs  ext_flood_fill.rs  ext_text_out_a.rs  ext_text_out_w.rs  fill_path.rs  fill_rgn.rs  frame_rgn.rs  gradient_fill.rs  line_to.rs  mod.rs  paint_rgn.rs  pie.rs  poly_bezier.rs  poly_bezier_16.rs  poly_bezier_to.rs  poly_bezier_to_16.rs  poly_draw.rs  poly_draw_16.rs  poly_polygon.rs  poly_polygon_16.rs  poly_polyline.rs  poly_polyline_16.rs  poly_text_out_a.rs  poly_text_out_w.rs  polygon.rs  polygon_16.rs  polyline.rs  polyline_16.rs  polyline_to.rs  polyline_to_16.rs  rectangle.rs  round_rect.rs  set_pixel_v.rs  small_text_out.rs  stroke_and_fill_path.rs  stroke_path.rs
core/src/parser/records/escape/: draw_escape.rs  ext_escape.rs  mod.rs  named_escape.rs
core/src/parser/records/object_creation/: create_brush_indirect.rs  create_color_space.rs  create_color_space_w.rs  create_dib_pattern_brush_pt.rs  create_mono_brush.rs  create_palette.rs  create_pen.rs  ext_create_font_indirect_w.rs  ext_create_pen.rs  mod.rs
core/src/parser/records/object_manipulation/: color_correct_palette.rs  delete_color_space.rs  delete_object.rs  mod.rs  resize_palette.rs  select_object.rs  select_palette.rs  set_color_space.rs  set_palette_entries.rs
core/src/parser/records/open_gl/: gls_bounded_record.rs  gls_record.rs  mod.rs
core/src/parser/records/path_bracket/: abort_path.rs  begin_path.rs  close_figure.rs  end_path.rs  flatten_path.rs  mod.rs  widen_path.rs
core/src/parser/records/state/: color_match_to_target_w.rs  force_ufi_mapping.rs  invert_rgn.rs  mod.rs  move_to_ex.rs  pixel_format.rs  realize_palette.rs  restore_dc.rs  save_dc.rs  scale_viewport_ext_ex.rs  scale_window_ext_ex.rs  set_arc_direction.rs  set_bk_color.rs  set_bk_mode.rs  set_brush_org_ex.rs  set_color_adjustment.rs  set_icm_mode.rs  set_icm_profile_a.rs  set_icm_profile_w.rs  set_layout.rs  set_linked_ufis.rs  set_map_mode.rs  set_mapper_flags.rs  set_miter_limit.rs  set_polyfill_mode.rs  set_rop2.rs  set_stretch_blt_mode.rs  set_text_align.rs  set_text_color.rs  set_text_justification.rs  set_viewport_ext_ex.rs  set_viewport_org_ex.rs  set_window_ext_ex.rs  set_window_org_ex.rs
core/src/parser/records/transform/: mod.rs  modify_world_transform.rs  set_world_transform.rs
core/tests/: svg_player.rs
docker/: compose.yaml
wasm/: Cargo.toml
wasm/src/: lib.rs
(+2 files in other folders)
