[package]
name = "emf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
  "env-filter",
] }

emf-core = { workspace = true, features = ["svg", "tracing"] }
wmf-core = { workspace = true, features = ["svg", "tracing"] }

[lints]
workspace = true
