[package]
name = "emf-cli"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = true, features = [
  "env-filter",
] }

emf-core = { workspace = true, features = ["svg", "tracing"] }
wmf-core = { workspace = true, features = ["svg", "tracing"] }

[lints]
workspace = true
