[package]
name = "emf-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["svg", "tracing"]
svg = ["wmf-core/svg"]
tracing = ["dep:tracing", "wmf-core/tracing"]

[dependencies]
embedded-io = { workspace = true }
paste = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true, optional = true }
wmf-core = { workspace = true }

[lints]
workspace = true
