[package]
name = "emf-core"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[features]
default = ["svg", "tracing"]
svg = ["wmf-core/svg"]
tracing = ["dep:tracing", "wmf-core/tracing"]

[dependencies]
embedded-io = { workspace = true }
paste = { workspace = true }
snafu = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true, optional = true }
wmf-core = { workspace = true }

[lints]
workspace = true
