[package]
name = "emf-wasm"
edition = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook", "tracing"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
tracing = ["dep:tracing-wasm", "emf-core/tracing", "wmf-core/tracing"]

[dependencies]
tracing-wasm = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }

emf-core = { workspace = true, features = ["svg"] }
wmf-core = { workspace = true, features = ["svg"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# `-Oz` strips unreachable wasm sections and re-runs `wasm-opt` size
# passes on the bundle. The proposal whitelist matches Binaryen 116:
# without these, `wasm-opt` rejects bytecode emitted by current
# rustc/wasm-bindgen, since they assume `bulk-memory`, `sign-ext`,
# `mutable-globals`, `nontrapping-float-to-int`, and `reference-types`.
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-reference-types",
]

[package.metadata.cargo-udeps.ignore]
development = ["wasm-bindgen-test"]
